[tool.poetry]
name = "downloads-organizer-python"
version = "0.1.0"
description = ""
authors = ["krkt <84625053+Chloro989@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "downloads_organizer_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.21.2"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.1.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
